assets/stylesheets/main.css
h1, h2, p {
  text-align: center;
  font-family: 'Open Sans', arial,sans-serif;
}

body {
  background: rgb(245, 245, 245); /*Whitish*/
  background: #E5E5E5; /*Google grey*/
  
}
h1 {
  font-size: 8rem;
}

h2 {
  font-size: 4rem;
  margin: 1rem 2rem;
}

p {
  font-size: 2rem;
  margin: 0 10%;
}

/*
 * Deals with the text size on different screens.
 */
@media screen and (max-width : 991px) {
  h2 {
    font-size: 5rem;
    margin: 2rem 3rem;
  }
  p {
    font-size: 3rem;
  }
  .card-title {
  text-align: left;
}
}
@media screen and (max-width : 570px) {
  h2 {
    font-size: 4rem;
    margin: 0 1rem;
    margin-top: 1rem;
    margin-bottom: 1.5rem;
  }
  p {
    font-size: 2rem;
  }
  .card-title {
    text-align: center;
  }
}

/* 
 * Takes care of the format of the cards and pictures 
 * to respect the golden ratio.
 */
.golden-ratio {
  text-align: center;
  position: relative;
  display: inline-block;
  width: 100%;
}

.golden-ratio::after {
  display: block;
  content: '';
}

.landscape::after {
  /* percentage of containing block _width_ */
  padding-top: 61.8%;
}

.portrait::after {
  /* percentage of containing block _width_ */
  padding-top: 161.8%;
}

.golden-ratio-container {
  position: absolute;
  overflow: hidden;
  margin: 0;
  bottom: 0;
  right: 0;
  left: 0;
  top: 0;
}

/*
 * Formats properly the like button on the picture.
 */
.hover-mask {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  display: table;
  position: absolute;
  opacity: 0;
  margin: auto auto;
  height: 100%;
  width: 100%;
}

.hover-mask-content {
  vertical-align: middle;
  font-size: 3rem;
  display: table-cell;
  opacity: .92;
  color: #fcfcfc;
}

.hover-mask-liked {
  background: rgba(0,0,0,.2);
  opacity:.8;

}

.hover-mask:hover {
  background: rgba(0,0,0,.3);
  opacity: 1;
}

.picture {
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  margin: 0 0.5rem;
  height: 100%;
}

.card {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  background-color: #fcfcfc;
  /*box-shadow: 0px 0px 1px 0px #5E5E5E;*/
  margin: 1rem 0;
}

.card-description {
  vertical-align: middle;
  text-align: left;
  margin-top: 1rem;
}

.category-title {
  text-align: center;
}

.circular {
  /*-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
  box-shadow: 0 0 8px rgba(0, 0, 0, .8);*/
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  background-position: center center;
  background-repeat: no-repeat;
  margin-bottom: 2rem;
  margin-top: 2rem;
  height: 300px;
  width: 300px;
}

.btn-circle {
  background: #66FF00;
  width: 70px;
  height: 70px;
  padding: 10px 16px;
  font-size: 24px;
  line-height: 1.33;
  text-align: center;
  border-radius: 35px;
}

.footer {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  border-top: 1px solid #EAEAEA;
  padding-top: 5px;
  margin-top: 45px;
  line-height: 1.42857;
  font-size: 14px;
  display: block;
  color: #999;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

footer ul {
  list-style: none outside none;
  text-decoration: none;
}

/*
 * General style definitions.
 */

a {
  background: none repeat scroll 0% 0% transparent;
}

a:hover, a:focus {
    text-decoration: underline;
    color: #2A6496;
}

footer a:hover {
  color: #222;
}

a:focus {
    outline: thin dotted;
    outline-offset: -2px;
}

footer ul li {
    margin-left: 10px;
    float: left;
}

ul, ol {
    margin-bottom: 10px;
    margin-top: 0px;
}

footer ul {
    list-style: none outside none;
    float: right;
}

